--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -4,23 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples for the DLA Survey Class"
+    "# Examples for the DLA Survey Class (v1.0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -333,19 +322,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "    with io.open('HD-LLS_ions.json', 'w', encoding='utf-8') as f:\n",
-    "        f.write(unicode(json.dumps(all_ions, sort_keys=True, indent=4, \n",
-    "            separators=(',', ': '))))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -354,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -365,24 +341,56 @@
      "text": [
       "H100: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA.fits\n",
       "H100: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_ions.json\n",
-      "H100: Loading transitions file /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_clms.tar.gz\n",
-      "Skipping a likely folder: CLMS\n"
+      "Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/DLA/H100/H100_DLA_sys.tar.gz\n",
+      "Skipping a likely folder: SYS"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<IGMSurvey: nsys=100, type=DLA, ref=Neeleman+13>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
+      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
+      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "linetools.lists.parse: Reading linelist --- \n",
+      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
+      "read_sets: Using set file -- \n",
+      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii"
+     ]
     }
    ],
    "source": [
     "reload(dlasrv)\n",
-    "h100 = dlasrv.DLASurvey.load_H100(skip_trans=False)\n",
+    "h100 = dlasrv.DLASurvey.load_H100()\n",
     "h100"
    ]
   },
@@ -605,154 +613,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from linetools import utils as ltu\n",
-    "from pyigm.abssys.lls import LLSSystem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sys_dict = ltu.loadjson('/u/xavier/Dropbox/Public/LLS/HD-LLS/HD-LLS_J103456.31+035859.3_z2.849.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n",
-      "WARNING:astropy:UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/verner94_tab6.fits"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
-      "read_sets: Using set file -- \n",
-      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n"
-     ]
-    }
-   ],
-   "source": [
-    "lls = LLSSystem.from_dict(sys_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<LLSSystem: 10:34:56.31 +03:58:59.3, zabs=2.8487, logNHI=19.6, tau_LL=252.367, [Z/H]=0 dex>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'FLAGS': [0, 144],\n",
-       " u'datafile': u'',\n",
-       " u'do_analysis': 1,\n",
-       " u'flag_kin': 0,\n",
-       " u'flg_eye': 0,\n",
-       " u'flg_inst': 144,\n",
-       " u'flg_limit': 0,\n",
-       " u'name': u'CI 1656',\n",
-       " u'spec': None,\n",
-       " u'vlim': <Quantity [-28., 38.] km / s>,\n",
-       " u'wvlim': <Quantity [ 0., 0.] Angstrom>}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lls._components['CII']._abslines['1334'].analy"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "tmp ="
-   ]
+   "source": []
   }
  ],
  "metadata": {
