--- a/docs/examples/LLSSurvey_examples.ipynb
+++ b/docs/examples/LLSSurvey_examples.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -292,11 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 165 files from Lists/lls_metals.lst in the tree /u/xavier/LLS/\n"
+     ]
+    }
+   ],
    "source": [
     "#reload(llsu)\n",
     "lls_survey = LLSSurvey.from_flist('Lists/lls_metals.lst', tree=os.getenv('LLSTREE'))"
@@ -329,14 +337,51 @@
      "text": [
       "HD-LLS: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1.fits\n",
       "HD-LLS: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_ions.json\n",
+      "HD-LLS: Loading metallicity file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1_dustnhi.hdf5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IGMSurvey: nsys=157, type=LLS, ref=HD-LLS>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grabs HD-LLS files locally or from the website, as needed\n",
+    "# Includes metallicity PDFs from Fumagalli+16\n",
+    "reload(llss)\n",
+    "hdlls = llss.LLSSurvey.load_HDLLS(load_sys=False)\n",
+    "hdlls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With Systems (takes ~2 min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HD-LLS: Loading summary file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1.fits\n",
+      "HD-LLS: Loading ions file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_ions.json\n",
       "HD-LLS: Loading metallicity file /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_DR1_dustnhi.hdf5\n",
-      "HD-LLS: Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_sys.tar.gz\n",
-      "Skipping a likely folder: SYS\n",
-      "> /Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.py(153)load_HDLLS()\n",
-      "-> abssys = LLSSystem.from_dict(tdict)\n",
-      "(Pdb) abssys\n",
-      "*** NameError: name 'abssys' is not defined\n",
-      "(Pdb) abssys = LLSSystem.from_dict(tdict)\n"
+      "Loading systems from /Users/xavier/local/Python/pyigm/pyigm/data/LLS/HD-LLS/HD-LLS_sys.tar.gz\n",
+      "Skipping a likely folder: SYS"
      ]
     },
     {
@@ -351,6 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "linetools.lists.parse: Reading linelist --- \n",
       "   /Users/xavier/local/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
       "linetools.lists.parse: Reading linelist --- \n",
@@ -377,66 +423,23 @@
       "linetools.lists.parse: Reading linelist --- \n",
       "   /Users/xavier/local/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
       "read_sets: Using set file -- \n",
-      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n",
-      "***"
+      "  /Users/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.0.ascii\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xavier/local/Python/linetools/linetools/isgm/abscomponent.py:221: UserWarning: Input absline with wrest=1335.71 Angstrom does not match component rules. Not appending\n",
-      "  warnings.warn('Input absline with wrest={:g} does not match component rules. Not appending'.format(absline.wrest))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " AttributeError: 'float' object has no attribute 'to'\n",
-      "(Pdb) abssys\n",
-      "*** NameError: name 'abssys' is not defined\n",
-      "(Pdb) 144-128\n",
-      "16\n",
-      "(Pdb) 5750.-2340*0.53\n",
-      "4509.8\n",
-      "(Pdb) exit\n"
-     ]
-    },
-    {
-     "ename": "BdbQuit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-56b69460894b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Includes metallicity PDFs from Fumagalli+16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mllss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mhdlls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mllss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLLSSurvey\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_HDLLS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskip_trans\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.pyc\u001b[0m in \u001b[0;36mload_HDLLS\u001b[0;34m(cls, grab_spectra, skip_trans)\u001b[0m\n\u001b[1;32m    151\u001b[0m                     \u001b[0mtdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                     \u001b[0;31m# Find system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m                     \u001b[0mi0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m                     \u001b[0mi1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m                     \u001b[0;31m# Generate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/xavier/local/Python/pyigm/pyigm/surveys/llssurvey.pyc\u001b[0m in \u001b[0;36mload_HDLLS\u001b[0;34m(cls, grab_spectra, skip_trans)\u001b[0m\n\u001b[1;32m    151\u001b[0m                     \u001b[0mtdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                     \u001b[0;31m# Find system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m                     \u001b[0mi0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m                     \u001b[0mi1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmember\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m                     \u001b[0;31m# Generate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/xavier/anaconda/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mBdbQuit\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "<IGMSurvey: nsys=157, type=LLS, ref=HD-LLS>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Grabs HD-LLS files locally or from the website, as needed\n",
-    "# Includes metallicity PDFs from Fumagalli+16\n",
-    "reload(llss)\n",
-    "hdlls = llss.LLSSurvey.load_HDLLS(skip_trans=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "## Test writing\n",
-    "tdict = hdlls._abs_sys[0].to_dict()\n",
-    "tdict"
+    "hdlls = llss.LLSSurvey.load_HDLLS()\n",
+    "hdlls"
    ]
   },
   {
@@ -499,11 +502,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;QTable length=16&gt;\n",
+       "<table id=\"table4735281616\">\n",
+       "<thead><tr><th>Z</th><th>ion</th><th>A</th><th>Ej</th><th>z</th><th>vmin</th><th>vmax</th><th>flag_N</th><th>logN</th><th>sig_logN</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th></th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>6</td><td>1</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>1</td><td>13.181</td><td>0.085</td></tr>\n",
+       "<tr><td>6</td><td>2</td><td>0</td><td>63.42</td><td>2.1871</td><td>-205.0</td><td>64.0</td><td>0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>6</td><td>4</td><td>0</td><td>0.0</td><td>2.1871</td><td>-423.0</td><td>64.0</td><td>1</td><td>14.259</td><td>0.01</td></tr>\n",
+       "<tr><td>8</td><td>1</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>1</td><td>14.161</td><td>0.038</td></tr>\n",
+       "<tr><td>12</td><td>1</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>11.716</td><td>0.0</td></tr>\n",
+       "<tr><td>12</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-413.0</td><td>64.0</td><td>1</td><td>13.645</td><td>0.019</td></tr>\n",
+       "<tr><td>13</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-405.0</td><td>64.0</td><td>2</td><td>12.999</td><td>0.029</td></tr>\n",
+       "<tr><td>13</td><td>3</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>12.404</td><td>0.0</td></tr>\n",
+       "<tr><td>14</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-423.0</td><td>64.0</td><td>1</td><td>13.749</td><td>0.034</td></tr>\n",
+       "<tr><td>14</td><td>4</td><td>0</td><td>0.0</td><td>2.1871</td><td>-421.0</td><td>64.0</td><td>1</td><td>13.742</td><td>0.01</td></tr>\n",
+       "<tr><td>16</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-79.0</td><td>64.0</td><td>1</td><td>14.189</td><td>0.133</td></tr>\n",
+       "<tr><td>24</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>13.049</td><td>0.0</td></tr>\n",
+       "<tr><td>25</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>12.384</td><td>0.0</td></tr>\n",
+       "<tr><td>26</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-328.0</td><td>64.0</td><td>1</td><td>13.109</td><td>0.028</td></tr>\n",
+       "<tr><td>28</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>13.396</td><td>0.0</td></tr>\n",
+       "<tr><td>30</td><td>2</td><td>0</td><td>0.0</td><td>2.1871</td><td>-213.0</td><td>64.0</td><td>3</td><td>12.383</td><td>0.0</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<QTable length=16>\n",
+       "  Z    ion    A      Ej      z      vmin    vmax  flag_N   logN  sig_logN\n",
+       "                                   km / s  km / s                        \n",
+       "int64 int64 int64 float64 float64 float64 float64 int64  float64 float64 \n",
+       "----- ----- ----- ------- ------- ------- ------- ------ ------- --------\n",
+       "    6     1     0     0.0  2.1871  -213.0    64.0      1  13.181    0.085\n",
+       "    6     2     0   63.42  2.1871  -205.0    64.0      0     0.0      0.0\n",
+       "    6     4     0     0.0  2.1871  -423.0    64.0      1  14.259     0.01\n",
+       "    8     1     0     0.0  2.1871  -213.0    64.0      1  14.161    0.038\n",
+       "   12     1     0     0.0  2.1871  -213.0    64.0      3  11.716      0.0\n",
+       "   12     2     0     0.0  2.1871  -413.0    64.0      1  13.645    0.019\n",
+       "   13     2     0     0.0  2.1871  -405.0    64.0      2  12.999    0.029\n",
+       "   13     3     0     0.0  2.1871  -213.0    64.0      3  12.404      0.0\n",
+       "   14     2     0     0.0  2.1871  -423.0    64.0      1  13.749    0.034\n",
+       "   14     4     0     0.0  2.1871  -421.0    64.0      1  13.742     0.01\n",
+       "   16     2     0     0.0  2.1871   -79.0    64.0      1  14.189    0.133\n",
+       "   24     2     0     0.0  2.1871  -213.0    64.0      3  13.049      0.0\n",
+       "   25     2     0     0.0  2.1871  -213.0    64.0      3  12.384      0.0\n",
+       "   26     2     0     0.0  2.1871  -328.0    64.0      1  13.109    0.028\n",
+       "   28     2     0     0.0  2.1871  -213.0    64.0      3  13.396      0.0\n",
+       "   30     2     0     0.0  2.1871  -213.0    64.0      3  12.383      0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdlls.abs_sys()[0]._ionN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=5&gt;\n",
+       "<table id=\"table4744539152\">\n",
+       "<thead><tr><th>name</th><th>Z</th><th>ion</th><th>A</th><th>Ej</th><th>z</th><th>vmin</th><th>vmax</th><th>flag_N</th><th>logN</th><th>sig_logN</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>unicode32</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>J000345-232346.5_z2.187</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>J003454.8+163920_z3.754</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>J004049.5-402514_z2.816</td><td>6</td><td>2</td><td>0</td><td>0.0</td><td>2.81609</td><td>-204.070410085</td><td>265.929589915</td><td>3</td><td>13.421</td><td>0.0</td></tr>\n",
+       "<tr><td>J010355.3-300946_z2.908</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td></tr>\n",
+       "<tr><td>J010516.8-184642_z2.927</td><td>6</td><td>2</td><td>0</td><td>0.0</td><td>2.92695</td><td>-157.182884198</td><td>188.817115802</td><td>2</td><td>14.594</td><td>0.016</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=5>\n",
+       "          name            Z    ion    A   ... flag_N   logN  sig_logN\n",
+       "                                          ...                        \n",
+       "       unicode32        int64 int64 int64 ... int64  float64 float64 \n",
+       "----------------------- ----- ----- ----- ... ------ ------- --------\n",
+       "J000345-232346.5_z2.187     0     0     0 ...      0     0.0      0.0\n",
+       "J003454.8+163920_z3.754     0     0     0 ...      0     0.0      0.0\n",
+       "J004049.5-402514_z2.816     6     2     0 ...      3  13.421      0.0\n",
+       "J010355.3-300946_z2.908     0     0     0 ...      0     0.0      0.0\n",
+       "J010516.8-184642_z2.927     6     2     0 ...      2  14.594    0.016"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CII_clms = hdlls.ions((6,2))\n",
     "CII_clms[0:5]"
