--- a/docs/examples/CGM_examples.ipynb
+++ b/docs/examples/CGM_examples.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -439,7 +439,20 @@
       "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1322+4645.349_11.fits.gz\n",
       "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1330+2813.289_28.fits.gz\n",
       "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1342-0053.157_10.fits.gz\n",
-      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1342-0053.77_10.fits.gz"
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1342-0053.77_10.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1419+4207.132_30.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1435+3604.126_21.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1435+3604.68_12.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1437+5045.317_38.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1445+3428.232_33.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1514+3619.287_14.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1550+4001.197_23.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1550+4001.97_33.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1555+3628.88_11.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1617+0638.253_39.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J1619+3342.113_40.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J2257+1340.270_40.fits.gz\n",
+      "cos_halos: Reading /Users/xavier/Dropbox/COS-Halos-Data//Summary/J2345-0059.356_12.fits.gz\n"
      ]
     }
    ],
@@ -451,13 +464,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([u'J0226+0015_268_22', u'J0401-0540_67_24', u'J0803+4332_306_20',\n",
+       "       u'J0910+1014_242_34', u'J0910+1014_34_46', u'J0914+2823_41_27',\n",
+       "       u'J0925+4004_196_22', u'J0928+6025_110_35', u'J0935+0204_15_28',\n",
+       "       u'J0943+0531_106_34', u'J0943+0531_216_61', u'J0943+0531_227_19',\n",
+       "       u'J0950+4831_177_27', u'J1009+0713_170_9', u'J1009+0713_204_17',\n",
+       "       u'J1016+4706_274_6', u'J1016+4706_359_16', u'J1112+3539_236_14',\n",
+       "       u'J1133+0327_110_5', u'J1133+0327_164_21', u'J1157-0022_230_7',\n",
+       "       u'J1220+3853_225_38', u'J1233+4758_94_38', u'J1233-0031_168_7',\n",
+       "       u'J1241+5721_199_6', u'J1241+5721_208_27', u'J1245+3356_236_36',\n",
+       "       u'J1322+4645_349_11', u'J1330+2813_289_28', u'J1342-0053_157_10',\n",
+       "       u'J1342-0053_77_10', u'J1419+4207_132_30', u'J1435+3604_126_21',\n",
+       "       u'J1435+3604_68_12', u'J1437+5045_317_38', u'J1445+3428_232_33',\n",
+       "       u'J1514+3619_287_14', u'J1550+4001_197_23', u'J1550+4001_97_33',\n",
+       "       u'J1555+3628_88_11', u'J1617+0638_253_39', u'J1619+3342_113_40',\n",
+       "       u'J2257+1340_270_40', u'J2345-0059_356_12'], \n",
+       "      dtype='<U17')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cos_halos.name"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cos_halos.name"
+    "cos_halos.cgm_abs[4].igm_sys"
    ]
   },
   {
